assets/css/main.css
/* ... */
.contact-form-card .forminator-description {
  color: var(--color-slate-500) !important;
}
.contact-form-card .forminator-error-message {
  color: var(--color-red-400) !important;
}
.portfolio-tag.html {
  background-color: #E34F26;
  color: #FFFFFF;
}
.portfolio-tag.css {
  background-color: #1572B6;
  color: #FFFFFF;
}
.portfolio-tag.js, .portfolio-tag.javascript {
  background-color: #F7DF1E;
  color: #000000;
}
.portfolio-tag.wordpress, .portfolio-tag.wp {
  background-color: #21759B;
  color: #FFFFFF;
}
.portfolio-tag.tailwindcss, .portfolio-tag.tailwind {
  background-color: #06B6D4;
  color: #000000;
}
.portfolio-tag.bootstrap {
  background-color: #7952B3;
  color: #FFFFFF;
}
.portfolio-tag.react {
  background-color: #61DAFB;
  color: #000000;
}
.portfolio-tag.vue {
  background-color: #4FC08D;
  color: #ffffff;
}
.portfolio-tag.angular {
  background-color: #DD0031;
  color: #FFFFFF;
}
.portfolio-tag.jquery {
  background-color: #0769AD;
  color: #FFFFFF;
}
.portfolio-tag.php {
  background-color: #777BB4;
  color: #FFFFFF;
}
.portfolio-tag.nodejs, .portfolio-tag.node {
  background-color: #339933;
  color: #FFFFFF;
}
.portfolio-tag.python {
  background-color: #3776AB;
  color: #FFFFFF;
}
.portfolio-tag.mysql {
  background-color: #4479A1;
  color: #FFFFFF;
}
.portfolio-tag.mongodb, .portfolio-tag.mongo {
  background-color: #47A248;
  color: #FFFFFF;
}
.portfolio-tag.git {
  background-color: #F05032;
  color: #FFFFFF;
}
.portfolio-tag.github {
  background-color: #181717;
  color: #FFFFFF;
}
.portfolio-tag.sass, .portfolio-tag.scss {
  background-color: #CC6699;
  color: #FFFFFF;
}
.portfolio-tag.webpack {
  background-color: #8DD6F9;
  color: #000000;
}
.portfolio-tag-filter-button:focus:not(:focus-visible) {
  outline: none;
}
.portfolio-tag-filter-button {
  touch-action: manipulation;
  -webkit-user-select: none;
  user-select: none;
}
.portfolio-carousel-scroller {
  overflow-anchor: none;
}
@keyframes fade-and-slide-in {
  0% {
    transform: translateY(15px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}
.fade-and-slide-in {
  opacity: 0;
  animation: fade-and-slide-in 0.5s ease-out 0.5s forwards;
}
@keyframes slide-in-left {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0);
  }
}
.slide-in-left {
  transform: translateX(100%);
  animation: slide-in-left 1s ease-out 0.5s forwards;
}
@keyframes slide-down {
  0% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(0);
  }
}
.slide-down {
  transform: translateY(-100%);
  animation: slide-down 0.5s ease-out 0.5s forwards;
}
.header-offset {
  margin-top: 24px;
  @media screen and (min-width: 768px) {
    margin-top: 40px;
  }
}
.forminator-field-captcha {
  margin-bottom: 28px;
}
@property --tw-scroll-snap-strictness {
  syntax: "*";
  inherits: false;
  initial-value: proximity;
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-gradient-position {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}
@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}
@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-leading {
  syntax: "*";
  inherits: false;
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-tracking {
  syntax: "*";
  inherits: false;
}
@property --tw-outline-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-backdrop-blur {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-brightness {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-contrast {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-grayscale {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-hue-rotate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-invert {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-opacity {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-saturate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-sepia {
  syntax: "*";
  inherits: false;
}
@property --tw-duration {
  syntax: "*";
  inherits: false;
}
@property --tw-scale-x {
  syntax: "*";
  inherits: false;
  initial-value: 1;
}
@property --tw-scale-y {
  syntax: "*";
  inherits: false;
  initial-value: 1;
}
@property --tw-scale-z {
  syntax: "*";
  inherits: false;
  initial-value: 1;
}
/* ... */

